my-website/versioned_docs/version-1.3.0/api/alphabetical-index.mdx
---
title: "Alphabetical Index"
sidebarTitle: "Alphabetical Index"
description: "Alphabetical index of all API symbols."
---

## _

- [__init__() (AzureAccountKeyCredentials method)](/versions/1.3.0/api/connector-options/credentials/tabsdata-azureaccountkeycredentials#tabsdata.AzureAccountKeyCredentials.__init__)
  - [(AzureDestination method)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-azuredestination#tabsdata.AzureDestination.__init__)
  - [(AzureSource method)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-azuresource#tabsdata.AzureSource.__init__)
  - [(CSVFormat method)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.__init__)
  - [(DestinationPlugin method)](/versions/1.3.0/api/connectors/plugins/tabsdata-destinationplugin#tabsdata.DestinationPlugin.__init__)
  - [(EnvironmentSecret method)](/versions/1.3.0/api/connector-options/secrets/tabsdata-environmentsecret#tabsdata.EnvironmentSecret.__init__)
  - [(LocalFileDestination method)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-localfiledestination#tabsdata.LocalFileDestination.__init__)
  - [(LocalFileSource method)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-localfilesource#tabsdata.LocalFileSource.__init__)
  - [(LogFormat method)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-logformat#tabsdata.LogFormat.__init__)
  - [(MariaDBDestination method)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mariadbdestination#tabsdata.MariaDBDestination.__init__)
  - [(MariaDBSource method)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mariadbsource#tabsdata.MariaDBSource.__init__)
  - [(MySQLDestination method)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mysqldestination#tabsdata.MySQLDestination.__init__)
  - [(MySQLSource method)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mysqlsource#tabsdata.MySQLSource.__init__)
  - [(NDJSONFormat method)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-ndjsonformat#tabsdata.NDJSONFormat.__init__)
  - [(OracleDestination method)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-oracledestination#tabsdata.OracleDestination.__init__)
  - [(OracleSource method)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-oraclesource#tabsdata.OracleSource.__init__)
  - [(ParquetFormat method)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-parquetformat#tabsdata.ParquetFormat.__init__)
  - [(PostgresDestination method)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-postgresdestination#tabsdata.PostgresDestination.__init__)
  - [(PostgresSource method)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-postgressource#tabsdata.PostgresSource.__init__)
  - [(S3AccessKeyCredentials method)](/versions/1.3.0/api/connector-options/credentials/tabsdata-s3accesskeycredentials#tabsdata.S3AccessKeyCredentials.__init__)
  - [(S3Destination method)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-s3destination#tabsdata.S3Destination.__init__)
  - [(S3Source method)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-s3source#tabsdata.S3Source.__init__)
  - [(SourcePlugin method)](/versions/1.3.0/api/connectors/plugins/tabsdata-sourceplugin#tabsdata.SourcePlugin.__init__)
  - [(UserPasswordCredentials method)](/versions/1.3.0/api/connector-options/credentials/tabsdata-userpasswordcredentials#tabsdata.UserPasswordCredentials.__init__)

## A

- [abs() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-abs#tabsdata.tableframe.expr.expr.Expr.abs)
- [account_key (AzureAccountKeyCredentials attribute)](/versions/1.3.0/api/connector-options/credentials/tabsdata-azureaccountkeycredentials#tabsdata.AzureAccountKeyCredentials.account_key)
- [account_name (AzureAccountKeyCredentials attribute)](/versions/1.3.0/api/connector-options/credentials/tabsdata-azureaccountkeycredentials#tabsdata.AzureAccountKeyCredentials.account_name)
- [add() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-add#tabsdata.tableframe.expr.expr.Expr.add)
- [add_business_days() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-add-business-days#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.add_business_days)
- [alias() (Expr method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-expr-expr-expr-alias#tabsdata.tableframe.expr.expr.Expr.alias)
- [and_() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-and#tabsdata.tableframe.expr.expr.Expr.and_)
- [arccos() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-arccos#tabsdata.tableframe.expr.expr.Expr.arccos)
- [arccosh() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-arccosh#tabsdata.tableframe.expr.expr.Expr.arccosh)
- [arcsin() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-arcsin#tabsdata.tableframe.expr.expr.Expr.arcsin)
- [arcsinh() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-arcsinh#tabsdata.tableframe.expr.expr.Expr.arcsinh)
- [arctan() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-arctan#tabsdata.tableframe.expr.expr.Expr.arctan)
- [arctanh() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-arctanh#tabsdata.tableframe.expr.expr.Expr.arctanh)
- [assert_has_cols() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-assert-has-cols#tabsdata.tableframe.lazyframe.frame.TableFrame.assert_has_cols)
- [aws_access_key_id (S3AccessKeyCredentials attribute)](/versions/1.3.0/api/connector-options/credentials/tabsdata-s3accesskeycredentials#tabsdata.S3AccessKeyCredentials.aws_access_key_id)
- [aws_secret_access_key (S3AccessKeyCredentials attribute)](/versions/1.3.0/api/connector-options/credentials/tabsdata-s3accesskeycredentials#tabsdata.S3AccessKeyCredentials.aws_secret_access_key)
- [AzureAccountKeyCredentials (class in tabsdata)](/versions/1.3.0/api/connector-options/credentials/tabsdata-azureaccountkeycredentials#tabsdata.AzureAccountKeyCredentials)
- [AzureDestination (class in tabsdata)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-azuredestination#tabsdata.AzureDestination)
- [AzureSource (class in tabsdata)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-azuresource#tabsdata.AzureSource)

## B

- [base_utc_offset() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-base-utc-offset#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.base_utc_offset)

## C

- [cast() (Expr method)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-expr-expr-expr-cast#tabsdata.tableframe.expr.expr.Expr.cast)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-lazyframe-frame-tableframe-cast#tabsdata.tableframe.lazyframe.frame.TableFrame.cast)
- [cast_time_unit() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-cast-time-unit#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.cast_time_unit)
- [cbrt() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-cbrt#tabsdata.tableframe.expr.expr.Expr.cbrt)
- [ceil() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-ceil#tabsdata.tableframe.expr.expr.Expr.ceil)
- [century() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-century#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.century)
- [clear() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-clear#tabsdata.tableframe.lazyframe.frame.TableFrame.clear)
- [clip() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-clip#tabsdata.tableframe.expr.expr.Expr.clip)
- [combine() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-combine#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.combine)
- [concat() (in module tabsdata.tableframe.functions.eager)](/versions/1.3.0/api/tableframe-api/union/tabsdata-tableframe-functions-eager-concat#tabsdata.tableframe.functions.eager.concat)
- [contains() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-contains#tabsdata.tableframe.expr.string.ExprStringNameSpace.contains)
- [contains_any() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-contains-any#tabsdata.tableframe.expr.string.ExprStringNameSpace.contains_any)
- [convert_time_zone() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-convert-time-zone#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.convert_time_zone)
- [cos() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-cos#tabsdata.tableframe.expr.expr.Expr.cos)
- [cosh() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-cosh#tabsdata.tableframe.expr.expr.Expr.cosh)
- [cot() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-cot#tabsdata.tableframe.expr.expr.Expr.cot)
- [count() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-count#tabsdata.tableframe.expr.expr.Expr.count)
  - [(TableFrameGroupBy method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-group-by-tableframegroupby-count#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.count)
- [count_matches() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-count-matches#tabsdata.tableframe.expr.string.ExprStringNameSpace.count_matches)
- [credentials (AzureDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-azuredestination#tabsdata.AzureDestination.credentials)
  - [(AzureSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-azuresource#tabsdata.AzureSource.credentials)
  - [(MariaDBDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mariadbdestination#tabsdata.MariaDBDestination.credentials)
  - [(MariaDBSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mariadbsource#tabsdata.MariaDBSource.credentials)
  - [(MySQLDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mysqldestination#tabsdata.MySQLDestination.credentials)
  - [(MySQLSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mysqlsource#tabsdata.MySQLSource.credentials)
  - [(OracleDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-oracledestination#tabsdata.OracleDestination.credentials)
  - [(OracleSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-oraclesource#tabsdata.OracleSource.credentials)
  - [(PostgresDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-postgresdestination#tabsdata.PostgresDestination.credentials)
  - [(PostgresSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-postgressource#tabsdata.PostgresSource.credentials)
  - [(S3Destination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-s3destination#tabsdata.S3Destination.credentials)
  - [(S3Source attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-s3source#tabsdata.S3Source.credentials)
- [CSVFormat (class in tabsdata)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat)

## D

- [date() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-date#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.date)
- [datetime() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-datetime#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.datetime)
- [day() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-day#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.day)
- [degrees() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-degrees#tabsdata.tableframe.expr.expr.Expr.degrees)
- [destination_table (MariaDBDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mariadbdestination#tabsdata.MariaDBDestination.destination_table)
  - [(MySQLDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mysqldestination#tabsdata.MySQLDestination.destination_table)
  - [(OracleDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-oracledestination#tabsdata.OracleDestination.destination_table)
  - [(PostgresDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-postgresdestination#tabsdata.PostgresDestination.destination_table)
- [DestinationPlugin (class in tabsdata)](/versions/1.3.0/api/connectors/plugins/tabsdata-destinationplugin#tabsdata.DestinationPlugin)
- [diff() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-diff#tabsdata.tableframe.expr.expr.Expr.diff)
- [drop() (TableFrame method)](/versions/1.3.0/api/tableframe-api/projection/tabsdata-tableframe-lazyframe-frame-tableframe-drop#tabsdata.tableframe.lazyframe.frame.TableFrame.drop)
- [drop_nans() (TableFrame method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-lazyframe-frame-tableframe-drop-nans#tabsdata.tableframe.lazyframe.frame.TableFrame.drop_nans)
- [drop_nulls() (TableFrame method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-lazyframe-frame-tableframe-drop-nulls#tabsdata.tableframe.lazyframe.frame.TableFrame.drop_nulls)
- [dst_offset() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-dst-offset#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.dst_offset)
- [dt (Expr property)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-expr-expr-expr-dt#tabsdata.tableframe.expr.expr.Expr.dt)
- [dtypes (TableFrame property)](/versions/1.3.0/api/tableframe-api/attributes/tabsdata-tableframe-lazyframe-frame-tableframe-dtypes#tabsdata.tableframe.lazyframe.frame.TableFrame.dtypes)

## E

- [empty() (TableFrame class method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-empty#tabsdata.tableframe.lazyframe.frame.TableFrame.empty)
- [ends_with() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-ends-with#tabsdata.tableframe.expr.string.ExprStringNameSpace.ends_with)
- [environment_variable_name (EnvironmentSecret attribute)](/versions/1.3.0/api/connector-options/secrets/tabsdata-environmentsecret#tabsdata.EnvironmentSecret.environment_variable_name)
- [EnvironmentSecret (class in tabsdata)](/versions/1.3.0/api/connector-options/secrets/tabsdata-environmentsecret#tabsdata.EnvironmentSecret)
- [eol_char (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.eol_char)
- [epoch() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-epoch#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.epoch)
- [eq() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-eq#tabsdata.tableframe.expr.expr.Expr.eq)
- [eq_missing() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-eq-missing#tabsdata.tableframe.expr.expr.Expr.eq_missing)
- [exp() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-exp#tabsdata.tableframe.expr.expr.Expr.exp)
- [explain() (TableFrame method)](/versions/1.3.0/api/tableframe-api/description/tabsdata-tableframe-lazyframe-frame-tableframe-explain#tabsdata.tableframe.lazyframe.frame.TableFrame.explain)
- [extract() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-extract#tabsdata.tableframe.expr.string.ExprStringNameSpace.extract)
- [extract_as_columns() (TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-extract-as-columns#tabsdata.tableframe.lazyframe.frame.TableFrame.extract_as_columns)
- [extract_as_rows() (TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-extract-as-rows#tabsdata.tableframe.lazyframe.frame.TableFrame.extract_as_rows)

## F

- [fill_nan() (Expr method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-expr-expr-expr-fill-nan#tabsdata.tableframe.expr.expr.Expr.fill_nan)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-lazyframe-frame-tableframe-fill-nan#tabsdata.tableframe.lazyframe.frame.TableFrame.fill_nan)
- [fill_null() (Expr method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-expr-expr-expr-fill-null#tabsdata.tableframe.expr.expr.Expr.fill_null)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/manipulation/tabsdata-tableframe-lazyframe-frame-tableframe-fill-null#tabsdata.tableframe.lazyframe.frame.TableFrame.fill_null)
- [filter() (Expr method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-expr-expr-expr-filter#tabsdata.tableframe.expr.expr.Expr.filter)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-filter#tabsdata.tableframe.lazyframe.frame.TableFrame.filter)
- [find() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-find#tabsdata.tableframe.expr.string.ExprStringNameSpace.find)
- [first() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-first#tabsdata.tableframe.expr.expr.Expr.first)
  - [(SelectorProxy method)](/versions/1.3.0/api/tableframe-api/projection/tabsdata-tableframe-selectors-selectorproxy-first#tabsdata.tableframe.selectors.SelectorProxy.first)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-first#tabsdata.tableframe.lazyframe.frame.TableFrame.first)
- [first_row() (TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-first-row#tabsdata.tableframe.lazyframe.frame.TableFrame.first_row)
- [floor() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-floor#tabsdata.tableframe.expr.expr.Expr.floor)
- [format (AzureDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-azuredestination#tabsdata.AzureDestination.format)
  - [(AzureSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-azuresource#tabsdata.AzureSource.format)
  - [(LocalFileSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-localfilesource#tabsdata.LocalFileSource.format)
  - [(S3Destination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-s3destination#tabsdata.S3Destination.format)
  - [(S3Source attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-s3source#tabsdata.S3Source.format)
- [from_dict() (TableFrame class method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-from-dict#tabsdata.tableframe.lazyframe.frame.TableFrame.from_dict)
- [from_pandas() (TableFrame class method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-from-pandas#tabsdata.tableframe.lazyframe.frame.TableFrame.from_pandas)
- [from_polars() (TableFrame class method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-from-polars#tabsdata.tableframe.lazyframe.frame.TableFrame.from_polars)

## G

- [ge() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-ge#tabsdata.tableframe.expr.expr.Expr.ge)
- [group_by() (TableFrame method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-frame-tableframe-group-by#tabsdata.tableframe.lazyframe.frame.TableFrame.group_by)
- [gt() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-gt#tabsdata.tableframe.expr.expr.Expr.gt)

## H

- [has_cols() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-has-cols#tabsdata.tableframe.lazyframe.frame.TableFrame.has_cols)
- [has_same_schema() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-has-same-schema#tabsdata.tableframe.lazyframe.frame.TableFrame.has_same_schema)
- [hash() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-hash#tabsdata.tableframe.expr.expr.Expr.hash)
- [head() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-head#tabsdata.tableframe.expr.string.ExprStringNameSpace.head)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-head#tabsdata.tableframe.lazyframe.frame.TableFrame.head)
- [hour() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-hour#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.hour)

## I

- [if_table_exists (MariaDBDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mariadbdestination#tabsdata.MariaDBDestination.if_table_exists)
  - [(MySQLDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mysqldestination#tabsdata.MySQLDestination.if_table_exists)
  - [(OracleDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-oracledestination#tabsdata.OracleDestination.if_table_exists)
  - [(PostgresDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-postgresdestination#tabsdata.PostgresDestination.if_table_exists)
- [initial_last_modified (AzureSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-azuresource#tabsdata.AzureSource.initial_last_modified)
  - [(LocalFileSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-localfilesource#tabsdata.LocalFileSource.initial_last_modified)
  - [(S3Source attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-s3source#tabsdata.S3Source.initial_last_modified)
- [initial_values (MariaDBSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mariadbsource#tabsdata.MariaDBSource.initial_values)
  - [(MySQLSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mysqlsource#tabsdata.MySQLSource.initial_values)
  - [(OracleSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-oraclesource#tabsdata.OracleSource.initial_values)
  - [(PostgresSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-postgressource#tabsdata.PostgresSource.initial_values)
- [input_comment_prefix (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_comment_prefix)
- [input_decimal_comma (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_decimal_comma)
- [input_encoding (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_encoding)
- [input_has_header (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_has_header)
- [input_ignore_errors (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_ignore_errors)
- [input_missing_is_null (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_missing_is_null)
- [input_null_values (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_null_values)
- [input_raise_if_empty (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_raise_if_empty)
- [input_skip_rows (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_skip_rows)
- [input_skip_rows_after_header (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_skip_rows_after_header)
- [input_truncate_ragged_lines (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_truncate_ragged_lines)
- [input_try_parse_dates (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.input_try_parse_dates)
- [is_between() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-between#tabsdata.tableframe.expr.expr.Expr.is_between)
- [is_empty() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-is-empty#tabsdata.tableframe.lazyframe.frame.TableFrame.is_empty)
- [is_finite() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-finite#tabsdata.tableframe.expr.expr.Expr.is_finite)
- [is_in() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-in#tabsdata.tableframe.expr.expr.Expr.is_in)
- [is_infinite() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-infinite#tabsdata.tableframe.expr.expr.Expr.is_infinite)
- [is_leap_year() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-is-leap-year#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.is_leap_year)
- [is_nan() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-nan#tabsdata.tableframe.expr.expr.Expr.is_nan)
- [is_not_nan() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-not-nan#tabsdata.tableframe.expr.expr.Expr.is_not_nan)
- [is_not_null() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-not-null#tabsdata.tableframe.expr.expr.Expr.is_not_null)
- [is_null() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-null#tabsdata.tableframe.expr.expr.Expr.is_null)
- [is_unique() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-is-unique#tabsdata.tableframe.expr.expr.Expr.is_unique)
- [iso_year() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-iso-year#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.iso_year)
- [item() (TableFrame method)](/versions/1.3.0/api/tableframe-api/projection/tabsdata-tableframe-lazyframe-frame-tableframe-item#tabsdata.tableframe.lazyframe.frame.TableFrame.item)

## J

- [join() (TableFrame method)](/versions/1.3.0/api/tableframe-api/join/tabsdata-tableframe-lazyframe-frame-tableframe-join#tabsdata.tableframe.lazyframe.frame.TableFrame.join)

## L

- [last() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-last#tabsdata.tableframe.expr.expr.Expr.last)
  - [(SelectorProxy method)](/versions/1.3.0/api/tableframe-api/projection/tabsdata-tableframe-selectors-selectorproxy-last#tabsdata.tableframe.selectors.SelectorProxy.last)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-last#tabsdata.tableframe.lazyframe.frame.TableFrame.last)
- [last_row() (TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-last-row#tabsdata.tableframe.lazyframe.frame.TableFrame.last_row)
- [le() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-le#tabsdata.tableframe.expr.expr.Expr.le)
- [len() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-len#tabsdata.tableframe.expr.expr.Expr.len)
- [len_bytes() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-len-bytes#tabsdata.tableframe.expr.string.ExprStringNameSpace.len_bytes)
- [len_chars() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-len-chars#tabsdata.tableframe.expr.string.ExprStringNameSpace.len_chars)
- [limit() (TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-limit#tabsdata.tableframe.lazyframe.frame.TableFrame.limit)
- [lit() (in module tabsdata.tableframe.functions.lit)](/versions/1.3.0/api/tableframe-api/generation/tabsdata-tableframe-functions-lit-lit#tabsdata.tableframe.functions.lit.lit)
- [LocalFileDestination (class in tabsdata)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-localfiledestination#tabsdata.LocalFileDestination)
- [LocalFileSource (class in tabsdata)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-localfilesource#tabsdata.LocalFileSource)
- [log() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-log#tabsdata.tableframe.expr.expr.Expr.log)
- [log10() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-log10#tabsdata.tableframe.expr.expr.Expr.log10)
- [log1p() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-log1p#tabsdata.tableframe.expr.expr.Expr.log1p)
- [LogFormat (class in tabsdata)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-logformat#tabsdata.LogFormat)
- [lt() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-lt#tabsdata.tableframe.expr.expr.Expr.lt)

## M

- [MariaDBDestination (class in tabsdata)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mariadbdestination#tabsdata.MariaDBDestination)
- [MariaDBSource (class in tabsdata)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mariadbsource#tabsdata.MariaDBSource)
- [max() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-max#tabsdata.tableframe.expr.expr.Expr.max)
  - [(TableFrameGroupBy method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-group-by-tableframegroupby-max#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.max)
- [mean() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-mean#tabsdata.tableframe.expr.expr.Expr.mean)
  - [(TableFrameGroupBy method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-group-by-tableframegroupby-mean#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.mean)
- [median() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-median#tabsdata.tableframe.expr.expr.Expr.median)
  - [(TableFrameGroupBy method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-group-by-tableframegroupby-median#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.median)
- [microsecond() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-microsecond#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.microsecond)
- [millennium() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-millennium#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.millennium)
- [millisecond() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-millisecond#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.millisecond)
- [min() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-min#tabsdata.tableframe.expr.expr.Expr.min)
  - [(TableFrameGroupBy method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-group-by-tableframegroupby-min#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.min)
- [minute() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-minute#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.minute)
- [mod() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-mod#tabsdata.tableframe.expr.expr.Expr.mod)
- [month() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-month#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.month)
- [month_end() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-month-end#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.month_end)
- [month_start() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-month-start#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.month_start)
- [mul() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-mul#tabsdata.tableframe.expr.expr.Expr.mul)
- [MySQLDestination (class in tabsdata)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mysqldestination#tabsdata.MySQLDestination)
- [MySQLSource (class in tabsdata)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mysqlsource#tabsdata.MySQLSource)

## N

- [n_unique() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-n-unique#tabsdata.tableframe.expr.expr.Expr.n_unique)
  - [(TableFrameGroupBy method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-group-by-tableframegroupby-n-unique#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.n_unique)
- [nanosecond() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-nanosecond#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.nanosecond)
- [NDJSONFormat (class in tabsdata)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-ndjsonformat#tabsdata.NDJSONFormat)
- [ne() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-ne#tabsdata.tableframe.expr.expr.Expr.ne)
- [ne_missing() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-ne-missing#tabsdata.tableframe.expr.expr.Expr.ne_missing)
- [neg() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-neg#tabsdata.tableframe.expr.expr.Expr.neg)
- [not_() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-not#tabsdata.tableframe.expr.expr.Expr.not_)

## O

- [offset_by() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-offset-by#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.offset_by)
- [or_() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-or#tabsdata.tableframe.expr.expr.Expr.or_)
- [OracleDestination (class in tabsdata)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-oracledestination#tabsdata.OracleDestination)
- [OracleSource (class in tabsdata)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-oraclesource#tabsdata.OracleSource)
- [ordinal_day() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-ordinal-day#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.ordinal_day)
- [output_date_format (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_date_format)
- [output_datetime_format (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_datetime_format)
- [output_float_precision (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_float_precision)
- [output_float_scientific (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_float_scientific)
- [output_include_header (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_include_header)
- [output_maintain_order (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_maintain_order)
- [output_null_value (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_null_value)
- [output_quote_style (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_quote_style)
- [output_time_format (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.output_time_format)

## P

- [pad_end() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-pad-end#tabsdata.tableframe.expr.string.ExprStringNameSpace.pad_end)
- [pad_start() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-pad-start#tabsdata.tableframe.expr.string.ExprStringNameSpace.pad_start)
- [ParquetFormat (class in tabsdata)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-parquetformat#tabsdata.ParquetFormat)
- [password (UserPasswordCredentials attribute)](/versions/1.3.0/api/connector-options/credentials/tabsdata-userpasswordcredentials#tabsdata.UserPasswordCredentials.password)
- [path (LocalFileSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-localfilesource#tabsdata.LocalFileSource.path)
- [PostgresDestination (class in tabsdata)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-postgresdestination#tabsdata.PostgresDestination)
- [PostgresSource (class in tabsdata)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-postgressource#tabsdata.PostgresSource)
- [pow() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-pow#tabsdata.tableframe.expr.expr.Expr.pow)
- [publisher() (in module tabsdata)](/versions/1.3.0/api/decorators/tabsdata-publisher#tabsdata.publisher)

## Q

- [quarter() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-quarter#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.quarter)
- [query (MariaDBSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mariadbsource#tabsdata.MariaDBSource.query)
  - [(MySQLSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mysqlsource#tabsdata.MySQLSource.query)
  - [(OracleSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-oraclesource#tabsdata.OracleSource.query)
  - [(PostgresSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-postgressource#tabsdata.PostgresSource.query)
- [quote_char (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.quote_char)

## R

- [radians() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-radians#tabsdata.tableframe.expr.expr.Expr.radians)
- [rank() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-rank#tabsdata.tableframe.expr.expr.Expr.rank)
- [reinterpret() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-reinterpret#tabsdata.tableframe.expr.expr.Expr.reinterpret)
- [rename() (TableFrame method)](/versions/1.3.0/api/tableframe-api/projection/tabsdata-tableframe-lazyframe-frame-tableframe-rename#tabsdata.tableframe.lazyframe.frame.TableFrame.rename)
- [replace() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-replace#tabsdata.tableframe.expr.string.ExprStringNameSpace.replace)
- [replace_all() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-replace-all#tabsdata.tableframe.expr.string.ExprStringNameSpace.replace_all)
- [replace_many() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-replace-many#tabsdata.tableframe.expr.string.ExprStringNameSpace.replace_many)
- [replace_time_zone() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-replace-time-zone#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.replace_time_zone)
- [reverse() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-reverse#tabsdata.tableframe.expr.string.ExprStringNameSpace.reverse)
- [round() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-round#tabsdata.tableframe.expr.expr.Expr.round)
- [round_sig_figs() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-round-sig-figs#tabsdata.tableframe.expr.expr.Expr.round_sig_figs)

## S

- [S3AccessKeyCredentials (class in tabsdata)](/versions/1.3.0/api/connector-options/credentials/tabsdata-s3accesskeycredentials#tabsdata.S3AccessKeyCredentials)
- [S3Destination (class in tabsdata)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-s3destination#tabsdata.S3Destination)
- [S3Source (class in tabsdata)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-s3source#tabsdata.S3Source)
- [second() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-second#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.second)
- [secret_value() (EnvironmentSecret method)](/versions/1.3.0/api/connector-options/secrets/tabsdata-environmentsecret#tabsdata.EnvironmentSecret.secret_value)
- [select() (TableFrame method)](/versions/1.3.0/api/tableframe-api/projection/tabsdata-tableframe-lazyframe-frame-tableframe-select#tabsdata.tableframe.lazyframe.frame.TableFrame.select)
- [separator (CSVFormat attribute)](/versions/1.3.0/api/connector-options/file-formats/tabsdata-csvformat#tabsdata.CSVFormat.separator)
- [show_graph() (TableFrame method)](/versions/1.3.0/api/tableframe-api/description/tabsdata-tableframe-lazyframe-frame-tableframe-show-graph#tabsdata.tableframe.lazyframe.frame.TableFrame.show_graph)
- [shrink_dtype() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-shrink-dtype#tabsdata.tableframe.expr.expr.Expr.shrink_dtype)
- [sign() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-sign#tabsdata.tableframe.expr.expr.Expr.sign)
- [sin() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-sin#tabsdata.tableframe.expr.expr.Expr.sin)
- [sinh() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-sinh#tabsdata.tableframe.expr.expr.Expr.sinh)
- [slice() (Expr method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-expr-expr-expr-slice#tabsdata.tableframe.expr.expr.Expr.slice)
  - [(ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-slice#tabsdata.tableframe.expr.string.ExprStringNameSpace.slice)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-slice#tabsdata.tableframe.lazyframe.frame.TableFrame.slice)
- [sort() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-sort#tabsdata.tableframe.lazyframe.frame.TableFrame.sort)
- [SourcePlugin (class in tabsdata)](/versions/1.3.0/api/connectors/plugins/tabsdata-sourceplugin#tabsdata.SourcePlugin)
- [sqrt() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-sqrt#tabsdata.tableframe.expr.expr.Expr.sqrt)
- [starts_with() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-starts-with#tabsdata.tableframe.expr.string.ExprStringNameSpace.starts_with)
- [str (Expr property)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-expr-expr-expr-str#tabsdata.tableframe.expr.expr.Expr.str)
- [strftime() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-strftime#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.strftime)
- [strip_chars() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-strip-chars#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_chars)
- [strip_chars_end() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-strip-chars-end#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_chars_end)
- [strip_chars_start() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-strip-chars-start#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_chars_start)
- [strip_prefix() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-strip-prefix#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_prefix)
- [strip_suffix() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-strip-suffix#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_suffix)
- [sub() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-sub#tabsdata.tableframe.expr.expr.Expr.sub)
- [subscriber() (in module tabsdata)](/versions/1.3.0/api/decorators/tabsdata-subscriber#tabsdata.subscriber)
- [sum() (Expr method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-expr-expr-expr-sum#tabsdata.tableframe.expr.expr.Expr.sum)
  - [(TableFrameGroupBy method)](/versions/1.3.0/api/tableframe-api/aggregation/tabsdata-tableframe-lazyframe-group-by-tableframegroupby-sum#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.sum)

## T

- [tail() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-tail#tabsdata.tableframe.expr.string.ExprStringNameSpace.tail)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-tail#tabsdata.tableframe.lazyframe.frame.TableFrame.tail)
- [tan() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-tan#tabsdata.tableframe.expr.expr.Expr.tan)
- [tanh() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-tanh#tabsdata.tableframe.expr.expr.Expr.tanh)
- [time() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-time#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.time)
- [timestamp() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-timestamp#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.timestamp)
- [to_date() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-expr-string-exprstringnamespace-to-date#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_date)
- [to_datetime() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-expr-string-exprstringnamespace-to-datetime#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_datetime)
- [to_dict() (AzureAccountKeyCredentials method)](/versions/1.3.0/api/connector-options/credentials/tabsdata-azureaccountkeycredentials#tabsdata.AzureAccountKeyCredentials.to_dict)
  - [(EnvironmentSecret method)](/versions/1.3.0/api/connector-options/secrets/tabsdata-environmentsecret#tabsdata.EnvironmentSecret.to_dict)
  - [(S3AccessKeyCredentials method)](/versions/1.3.0/api/connector-options/credentials/tabsdata-s3accesskeycredentials#tabsdata.S3AccessKeyCredentials.to_dict)
  - [(TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-to-dict#tabsdata.tableframe.lazyframe.frame.TableFrame.to_dict)
  - [(UserPasswordCredentials method)](/versions/1.3.0/api/connector-options/credentials/tabsdata-userpasswordcredentials#tabsdata.UserPasswordCredentials.to_dict)
- [to_integer() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-expr-string-exprstringnamespace-to-integer#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_integer)
- [to_lowercase() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-to-lowercase#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_lowercase)
- [to_pandas() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-to-pandas#tabsdata.tableframe.lazyframe.frame.TableFrame.to_pandas)
- [to_polars_df() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-to-polars-df#tabsdata.tableframe.lazyframe.frame.TableFrame.to_polars_df)
- [to_polars_lf() (TableFrame method)](/versions/1.3.0/api/tableframe-api/tableframe/tabsdata-tableframe-lazyframe-frame-tableframe-to-polars-lf#tabsdata.tableframe.lazyframe.frame.TableFrame.to_polars_lf)
- [to_string() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-to-string#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.to_string)
- [to_time() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/type-casting/tabsdata-tableframe-expr-string-exprstringnamespace-to-time#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_time)
- [to_titlecase() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-to-titlecase#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_titlecase)
- [to_uppercase() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-to-uppercase#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_uppercase)
- [total_days() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-total-days#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_days)
- [total_hours() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-total-hours#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_hours)
- [total_microseconds() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-total-microseconds#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_microseconds)
- [total_milliseconds() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-total-milliseconds#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_milliseconds)
- [total_minutes() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-total-minutes#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_minutes)
- [total_nanoseconds() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-total-nanoseconds#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_nanoseconds)
- [total_seconds() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-total-seconds#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_seconds)
- [transformer() (in module tabsdata)](/versions/1.3.0/api/decorators/tabsdata-transformer#tabsdata.transformer)
- [trigger_output() (DestinationPlugin method)](/versions/1.3.0/api/connectors/plugins/tabsdata-destinationplugin#tabsdata.DestinationPlugin.trigger_output)
- [truediv() (Expr method)](/versions/1.3.0/api/tableframe-api/numeric/tabsdata-tableframe-expr-expr-expr-truediv#tabsdata.tableframe.expr.expr.Expr.truediv)
- [truncate() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-truncate#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.truncate)

## U

- [unique() (TableFrame method)](/versions/1.3.0/api/tableframe-api/filters/tabsdata-tableframe-lazyframe-frame-tableframe-unique#tabsdata.tableframe.lazyframe.frame.TableFrame.unique)
- [uri (AzureDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-azuredestination#tabsdata.AzureDestination.uri)
  - [(AzureSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-azuresource#tabsdata.AzureSource.uri)
  - [(MariaDBDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mariadbdestination#tabsdata.MariaDBDestination.uri)
  - [(MariaDBSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mariadbsource#tabsdata.MariaDBSource.uri)
  - [(MySQLDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-mysqldestination#tabsdata.MySQLDestination.uri)
  - [(MySQLSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-mysqlsource#tabsdata.MySQLSource.uri)
  - [(OracleDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-oracledestination#tabsdata.OracleDestination.uri)
  - [(OracleSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-oraclesource#tabsdata.OracleSource.uri)
  - [(PostgresDestination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-postgresdestination#tabsdata.PostgresDestination.uri)
  - [(PostgresSource attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-postgressource#tabsdata.PostgresSource.uri)
  - [(S3Destination attribute)](/versions/1.3.0/api/connectors/for-subscribers/tabsdata-s3destination#tabsdata.S3Destination.uri)
  - [(S3Source attribute)](/versions/1.3.0/api/connectors/for-publishers/tabsdata-s3source#tabsdata.S3Source.uri)
- [user (UserPasswordCredentials attribute)](/versions/1.3.0/api/connector-options/credentials/tabsdata-userpasswordcredentials#tabsdata.UserPasswordCredentials.user)
- [UserPasswordCredentials (class in tabsdata)](/versions/1.3.0/api/connector-options/credentials/tabsdata-userpasswordcredentials#tabsdata.UserPasswordCredentials)

## W

- [week() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-week#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.week)
- [weekday() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-weekday#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.weekday)
- [with_columns() (TableFrame method)](/versions/1.3.0/api/tableframe-api/projection/tabsdata-tableframe-lazyframe-frame-tableframe-with-columns#tabsdata.tableframe.lazyframe.frame.TableFrame.with_columns)
- [with_time_unit() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-with-time-unit#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.with_time_unit)

## X

- [xor() (Expr method)](/versions/1.3.0/api/tableframe-api/logic/tabsdata-tableframe-expr-expr-expr-xor#tabsdata.tableframe.expr.expr.Expr.xor)

## Y

- [year() (ExprDateTimeNameSpace method)](/versions/1.3.0/api/tableframe-api/date/tabsdata-tableframe-functions-datetime-exprdatetimenamespace-year#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.year)

## Z

- [zfill() (ExprStringNameSpace method)](/versions/1.3.0/api/tableframe-api/string/tabsdata-tableframe-expr-string-exprstringnamespace-zfill#tabsdata.tableframe.expr.string.ExprStringNameSpace.zfill)

